MicroServicios_Poc/ingress-microservicio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservicio-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - microservicio.135.237.63.234.nip.io
      secretName: microservicio-tls
  rules:
    - host: microservicio.135.237.63.234.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microservice-app-helm
                port:
                  number: 80
